# opf-benchmarks-geo

./: .gitignore  README.md  REVERSE_BENCHMARK.md  pyproject.toml  run_benchmarks.ipynb  shorts_ideas.mdx
notebooks/: run_benchmarks.ipynb
opf_benchmarks/: aggregate.py  charts.py  label_map.py  opf_format.py  run_eval.py
opf_benchmarks/adapters/: __init__.py  ai4privacy.py  argilla.py  gretel.py  nemotron.py
scripts/: analyze_unmapped.py  download_datasets.py  vast_provision.sh  vast_pull_results.sh  vast_run.py  vast_run.sh  vast_setup.sh
